--- a/proglogica/tutoriales/prolog-gh-pages/index.html
+++ b/proglogica/tutoriales/prolog-gh-pages/index.html
@@ -59,6 +59,7 @@
     <li><a href="#71-construcci%C3%B3n-de-expresiones-aritm%C3%A9ticas" aria-hidden="true">7.1 Construcción de expresiones aritméticas</a></li>
     <li><a href="#72-comparaci%C3%B3n-de-t%C3%A9rminos" aria-hidden="true">7.2 Comparación de términos</a></li>
     <li><a href="#73-comparaci%C3%B3n-de-expresiones" aria-hidden="true">7.3 Comparación de expresiones</a></li>
+    <li><a href="#74-diferencia-de-expresiones" aria-hidden="true">7.4 Diferencia entre comparación de términos y comparación de expresiones</a></li>
   </ul>
   <li><a href="#8-predicados-predefinidos" aria-hidden="true">8. Predicados predefinidos</a></li>
   <li><a href="#9-listas" aria-hidden="true">9. Listas</a></li>
@@ -743,6 +744,36 @@ de expresiones:</p>
 </tr>
 </tbody>
 </table>
+
+<h2>
+  <a id="74-diferencia-de-expresiones" class="anchor" href="#74-diferencia-de-expresiones" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>7.4 Diferencia entre comparación de términos y comparación de expresiones
+</h2>
+
+<p align="justify">En Prolog, los operadores de comparación de expresiones y de términos también son llamados comparadores sintácticos y semánticos respectivamente, 
+  estos son conceptos fundamentales que se utilizan para comparar y relacionar términos y estructuras de datos en este lenguaje de programación lógica. 
+  Estos operadores desempeñan un papel crucial en la formulación de reglas lógicas y consultas, lo que permite a los programadores expresar y resolver 
+  problemas de manera declarativa. A continuación, profundizaremos en la diferencia entre los operadores sintácticos y semánticos, y cómo influyen en la
+  programación en Prolog.</p>
+<h3>Operadores Semánticos</h3>
+<p align="justify">Por otro lado, los operadores semánticos se enfocan en la comparación de términos y estructuras de datos en función de su significado o contenido. 
+  La igualdad semántica implica que dos términos o estructuras son iguales si representan la misma entidad o valor, independientemente de cómo se expresan 
+  en el código fuente. </p>
+<h3>Operadores Sintácticos</h3>
+<p align="justify">Los operadores sintácticos se centran en la comparación de términos y estructuras de datos en función de su representación literal en el código fuente.
+   La igualdad sintáctica implica que dos términos o estructuras deben ser idénticos en su forma, notación y estructura para considerarse iguales. </p>
+<h3>Diferencias Clave</h3>
+<h4>Representación vs. Significado</h4>
+<p align="justify">La principal diferencia entre los operadores sintácticos y semánticos radica en si se comparan los términos en función de su representación literal 
+  (sintaxis) o su significado (semántica).</p>
+
+<h4>Flexibilidad Semántica</h4>
+<p align="justify">Los operadores semánticos son más flexibles en términos de cómo se pueden expresar los términos. Dos términos que 
+representan la misma entidad, pero se han escrito de manera diferente, son iguales desde una perspectiva semántica.</p>
+
+<h4>Evaluación de Igualdad</h4>
+<p align="justify">La igualdad sintáctica requiere que los términos sean idénticos en su forma literal, mientras que la igualdad semántica se 
+  basa en si representan la misma entidad o valor.</p>
+
 
 <h1>
 <a id="8-predicados-predefinidos" class="anchor" href="#8-predicados-predefinidos" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>8. Predicados predefinidos</h1>
@@ -1803,6 +1834,7 @@ Definitive Clauses Grammar o por sus siglas en inglés DCG</p>
 <p>                Jonathan López Castellanos, Victor Barragán Páez y Wilson Arévalo Rodríguez.</p>
 <p>                María Fernanda Carbonell Santos, Juan David González Muñoz, Ivan Alejandro Cruz Tole y Yuli Beltran Rozo</p>
 <p>                Julián Andrés Pereira, Jefferson Daniel Castro, Nicolás Andrés Caicedo, Gabriel Enrique Ramirez </p>
+<p>                Andrea Katerine Calderón, Angela Maria Cardenas, Valentina Colmenares, Luis Alfonso Díaz</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/mppinedav/prolog">Prolog</a> is maintained by <a href="https://github.com/ferestrepoca/paradigmas-de-programacion/tree/gh-pages/proglogica/tutoriales/prolog-gh-pages">link</a>.</span>
