Parte 1 de teoria programacion logica

--- a/proglogica/logica_teoria/index.html
+++ b/proglogica/logica_teoria/index.html
@@ -76,6 +76,7 @@
               <li><a href="lenguaje.html#prolog">Prolog</a></li>
               <li><a href="lenguaje.html#mercury">Mercury</a></li>
               <li><a href="lenguaje.html#clp">CLP (FD)</a></li>
+              <li><a href="lenguaje.html#cycl">CycL</a></li>
               <li><a href="lenguaje.html#godel">Godel</a></li>
               <li><a href="lenguaje.html#minikanren">miniKanren</a></li>
               <li><a href="lenguaje.html#sequencel">SequenceL</a></li>
@@ -125,11 +126,11 @@
 
           <div class="col-lg-6 content order-lg-1 order-2">
             <h2 class="title">¿Qué es un paradigma?</h2>
-            <p>
-              <center><i>"Es el conjunto de principios subyacentes que dan forma al estilo de un lenguaje de
-                  programación."</i></center>
-            </p>
-            <p align="right">
+            <blockquote class="text-center font-italic">                            
+              "Es el conjunto de principios subyacentes que dan forma al estilo de un lenguaje de
+              programación."              
+            </blockquote>
+            <p class="text-right">
               <small>
                 <b>
                   -Concepts, Techniques, and Models of Computer Programming.
@@ -142,6 +143,11 @@
             <br />
             <p>
               Representa un enfoque particular o filosofía para diseñar soluciones.
+            </p>
+            <p>
+              Adoptar un paradigma es elegir una lente a través de la cual se examinarán los problemas y se diseñarán las soluciones. 
+              Esta elección puede tener un impacto profundo en el proceso de desarrollo, ya que cada paradigma lleva consigo principios 
+              y prácticas inherentes que moldean la toma de decisiones.
             </p>
           </div>
 
