--- a/proglogica/logica_teoria/lenguaje.html
+++ b/proglogica/logica_teoria/lenguaje.html
@@ -76,6 +76,7 @@
               <li><a href="lenguaje.html#prolog">Prolog</a></li>
               <li><a href="lenguaje.html#mercury">Mercury</a></li>
               <li><a href="lenguaje.html#clp">CLP (FD)</a></li>
+              <li><a href="lenguaje.html#cycl">CycL</a></li>
               <li><a href="lenguaje.html#godel">Godel</a></li>
               <li><a href="lenguaje.html#minikanren">miniKanren</a></li>
               <li><a href="lenguaje.html#sequencel">SequenceL</a></li>
@@ -124,6 +125,7 @@
           <li>Prolog</li>
           <li>Mercury</li>
           <li>CLP (FD)</li>
+          <li>CycL</li>
           <li>CSP (Constraint Satisfaction Problem)</li>
           <li>Lambda Prolog</li>
           <li>Logtalk</li>
@@ -252,6 +254,29 @@
           </p>
           <b>Ejemplo:</b> SEND MORE MONEY puzzle:
           <p style=" display: flex; justify-content: center;"><img src="img/clp.PNG" style="width: 50%;"></p>
+        </div>
+      </div>
+    </section><!-- #content -->
+
+    <!--==========================
+        Content Section
+        ============================-->
+    <section id="cycl" style="margin-top:50px;">
+      <div class="container">
+        <div class="text_cell_render border-box-sizing rendered_html">
+          <h2 class="title"><strong>CycL</strong></h2>
+          <p>
+            CycL es el lenguaje de programación lógica asociado con el sistema Cyc, que es una base de conocimiento 
+            de inteligencia artificial y un proyecto de investigación con el objetivo de codificar conocimientos 
+            generales en forma computable. El sistema Cyc utiliza CycL para representar la información y las reglas 
+            que permiten a la máquina razonar acerca de ese conocimiento de una manera que imita el razonamiento humano.
+          </p>
+          <p>
+            CycL es un lenguaje extremadamente expresivo y permite la representación de conocimientos muy detallados 
+            y sutiles sobre el mundo. Permite declarar hechos, reglas, y realizar consultas complejas. También puede
+             manejar excepciones y tiene la capacidad de representar el conocimiento contextual, lo que significa que 
+             puede entender cuándo ciertas reglas o hechos se aplican y cuándo no, basándose en el contexto dado.
+          </p>
         </div>
       </div>
     </section><!-- #content -->
