--- a/proglogica/logica_teoria/presentaciones.html
+++ b/proglogica/logica_teoria/presentaciones.html
@@ -76,6 +76,7 @@
                             <li><a href="lenguaje.html#prolog">Prolog</a></li>
                             <li><a href="lenguaje.html#mercury">Mercury</a></li>
                             <li><a href="lenguaje.html#clp">CLP (FD)</a></li>
+                            <li><a href="lenguaje.html#cycl">CycL</a></li>
                             <li><a href="lenguaje.html#godel">Godel</a></li>
                             <li><a href="lenguaje.html#minikanren">miniKanren</a></li>
                             <li><a href="lenguaje.html#sequencel">SequenceL</a></li>
@@ -230,6 +231,11 @@
                         <li>Mercury:
                             <ul>
                                 <li><a href="https://mercurylang.org/">Mercury</a></li>
+                            </ul>
+                        </li>
+                        <li>CycL
+                            <ul>
+                                <li><a href="https://en.wikipedia.org/wiki/CycL">Wikipedia-CycL</a></li>
                             </ul>
                         </li>
                         <li>miniKanren:
