--- a/proglogica/logica_teoria/proglogica.html
+++ b/proglogica/logica_teoria/proglogica.html
@@ -125,14 +125,18 @@
             comportamientos de orden superior, en este sentido, destacan los lenguajes funcionales
             ya que se basan en el Calculo Lambda, es la única teoría lógica de orden superior.
           </p>
-          <h5 class="frase">
-            <center><i>"Modelar problemas por medio de la abstracción, utilizando un sistema de lógica
+          <p>
+            Busca modelar problemas abstractos utilizando un conjunto de reglas, predicados, 
+            hechos lógicos y sus relaciones para llegar a conclusiones por medio de la indución.
+          </p>
+          <h5 class="frase text-center font-italic">
+            "Modelar problemas por medio de la abstracción, utilizando un sistema de lógica
                 formal que permite llegar
-                a una conclusión por medio de hechos y reglas"</i></center>
+                a una conclusión por medio de hechos y reglas"
           </h5>
-          <h5 class="frase">
-            <center><i>"Aplicación de reglas de la lógica para inferir conclusiones a partir de
-                datos."</i></center>
+          <h5 class="frase text-center font-italic">
+            "Aplicación de reglas de la lógica para inferir conclusiones a partir de
+            datos."
           </h5>
 
         </div>
@@ -780,6 +784,7 @@
             <li>Descripciones independientes de la implementación (unificación semántica).</li>
             <li>Puede mejorarse la eficiencia modificando el componente de control sin tener que modificar la lógica
               del algoritmo.</li>
+            <li>Se separan los datos (los hechos) del programa (las reglas), lo que puede facilitar el mantenimiento y la modificación del programa.</li>
             <li>Base de conocimiento fácilmente escalable.</li>
             <li>Relaciones multipropósito.</li>
             <li>Expresión simple y precisa de los problemas.</li>
@@ -792,6 +797,8 @@
             <h3>Desventajas</h3>
             <li>Dependiendo del problema a solucionar, la implementación y el motor de inferencia,
               puede llegar a ser extremadamente ineficiente.</li>
+            <li>Para aquellos acostumbrados a paradigmas de programación imperativa u orientada a objetos, 
+              la programación lógica puede tener una curva de aprendizaje pronunciada</li>
             <li>Pocas y muy específicas áreas de aplicación.</li>
             <li>Existen muy pocas herramientas de depuración, en su mayoría poco efectivas.</li>
             <li>En problemas reales, es poco utilizado.</li>
