--- a/proglogica/logica_teoria/aplicaciones.html
+++ b/proglogica/logica_teoria/aplicaciones.html
@@ -76,6 +76,7 @@
                             <li><a href="lenguaje.html#prolog">Prolog</a></li>
                             <li><a href="lenguaje.html#mercury">Mercury</a></li>
                             <li><a href="lenguaje.html#clp">CLP (FD)</a></li>
+                            <li><a href="lenguaje.html#cycl">CycL</a></li>
                             <li><a href="lenguaje.html#godel">Godel</a></li>
                             <li><a href="lenguaje.html#minikanren">miniKanren</a></li>
                             <li><a href="lenguaje.html#sequencel">SequenceL</a></li>
