--- a/progfun/funcional_teoria/examples.html
+++ b/progfun/funcional_teoria/examples.html
@@ -52,13 +52,10 @@
             <div class="row">
                 <h1>HOLA MUNDO</h1>
                 <div class="col-md-12">
-                    <p class="container-logo">Clojure<div class="logo-example"><img src="images/Clojure_logo.svg.png" alt="Clojure"></div></p><script src="https://gist.github.com/jsarmientopu/984eb5ad4962cee2861c285355dc8228.js"></script>
-                    <p class="container-logo">Haskell<div class="logo-example"><img src="images/Haskell.png" alt="Haskell"></div></p><script src="https://pastebin.com/embed_js/AeuVYDCb"></script>
-                    <p class="container-logo">Scala<div class="logo-example"><img src="images/scalaLogo.png" alt="Scala"></div></p><script src="https://pastebin.com/embed_js/jfURy7FM"></script>
-                    <p class="container-logo">Lisp<div class="logo-example"><img src="images/lispLogo.svg.png" alt="Lisp"></div></p><script src="https://pastebin.com/embed_js/0MY5UqLD"></script>
-                    <p class="container-logo">Ocaml<div class="logo-example"><img src="images/ocaml.jpeg" alt="Ocaml"></div></p><script src="https://pastebin.com/embed_js/YLqyNqfZ"></script>
-                    <p class="container-logo">Scheme<div class="logo-example"><img src="images/Scheme_logo.png" alt="Scheme"></div></p><script src="https://gist.github.com/jsarmientopu/e63a5e35adcadb06f7deb86924f354c5.js"></script>
-                    <p class="container-logo">Erlang<div class="logo-example"><img src="images/erlangLogo.png" alt="Erlang"></div></p><script src="https://gist.github.com/jsarmientopu/939f4abf0f004ed172775b0419cf4c69.js"></script>
+                    <p>Haskell</p><script src="https://pastebin.com/embed_js/AeuVYDCb"></script>
+                    <br><p>Scala</p><script src="https://pastebin.com/embed_js/jfURy7FM"></script>
+                    <br><p>Lisp</p><script src="https://pastebin.com/embed_js/0MY5UqLD"></script>
+                    <br><p>Ocaml</p><script src="https://pastebin.com/embed_js/YLqyNqfZ"></script>
                 </div>
 
 
@@ -67,16 +64,15 @@
             <div class="row">
                 <h1>FIBONACCI</h1>
                 <div class="col-md-12">
-                    <p class="container-logo">Clojure<div class="logo-example"><img src="images/Clojure_logo.svg.png" alt="Clojure"></div></p><script src="https://pastebin.com/embed_js/YFCjdj52"></script>
-                    <p class="container-logo">Haskell<div class="logo-example"><img src="images/Haskell.png" alt="Haskell"></div></p><script src="https://pastebin.com/embed_js/A9ZPUPcd"></script>
-                    <p class="container-logo">Scala<div class="logo-example"><img src="images/scalaLogo.png" alt="Scala"></div></p><script src="https://pastebin.com/embed_js/RNP2gvfT"></script>
-                    <p class="container-logo">Lisp<div class="logo-example"><img src="images/lispLogo.svg.png" alt="Lisp"></div></p><script src="https://pastebin.com/embed_js/DaTXGkTE"></script>
-                    <p class="container-logo">Ocaml<div class="logo-example"><img src="images/ocaml.jpeg" alt="Ocaml"></div></p><script src="https://pastebin.com/embed_js/fu2S6DEF"></script>
-                    <p class="container-logo">Scheme<div class="logo-example"><img src="images/Scheme_logo.png" alt="Scheme"></div></p><script src="https://gist.github.com/jsarmientopu/bd0760408b29c7f959a52e560f07d3b4.js"></script>
-                    <p class="container-logo">Erlang<div class="logo-example"><img src="images/erlangLogo.png" alt="Erlang"></div></p><script src="https://pastebin.com/embed_js/P18RX5eC"></script>
-                    <p class="container-logo">JavaScript<div class="logo-example"><img src="images/javascriptlogo.png" alt="JavaScript"></div></p><script src="https://pastebin.com/embed_js/pKpuRMRT"></script>
-                    <p class="container-logo">Python<div class="logo-example"><img src="images/pythonLogo.svg.png" alt="Python"></div></p><script src="https://pastebin.com/embed_js/3sdbcrtN"></script>
-                    <p class="container-logo">R<div class="logo-example"><img src="images/RLogo.png" alt="R"></div></p><script src="https://pastebin.com/embed_js/QYbiWphh"></script>
+                    <p>Clojure</p><script src="https://pastebin.com/embed_js/YFCjdj52"></script>
+                    <br><p>Erlang</p><script src="https://pastebin.com/embed_js/P18RX5eC"></script>
+                    <br><p>Haskell</p><script src="https://pastebin.com/embed_js/A9ZPUPcd"></script>
+                    <br><p>JavaScript</p><script src="https://pastebin.com/embed_js/pKpuRMRT"></script>
+                    <br><p>Lisp</p><script src="https://pastebin.com/embed_js/DaTXGkTE"></script>
+                    <br><p>Python</p><script src="https://pastebin.com/embed_js/3sdbcrtN"></script>
+                    <br><p>R</p><script src="https://pastebin.com/embed_js/QYbiWphh"></script>
+                    <br><p>Ocaml</p><script src="https://pastebin.com/embed_js/fu2S6DEF"></script>
+                    <br><p>Scala</p><script src="https://pastebin.com/embed_js/RNP2gvfT"></script>
                 </div>
 
 
@@ -86,60 +82,53 @@
             <div class="row">
                 <h1>Ejemplo en Kotlin</h1>
                 <div class="col-md-12">
-                    <br><p class="container-logo">Kotlin<div class="logo-example"><img src="images/kotlinLogo.png" alt="Kotlin"></div></p><script src="https://pastebin.com/embed_js/ERTjEiLf"></script>
+                    <br><p>Kotlin</p><script src="https://pastebin.com/embed_js/ERTjEiLf"></script>
                 </div>
             </div>
 
             <div class="row">
                 <h1>Funciones puras</h1>
                 <div class="col-md-12">
-                    <p class="container-logo">Clojure<div class="logo-example"><img src="images/Clojure_logo.svg.png" alt="Clojure"></div></p><script src="https://gist.github.com/jsarmientopu/481cfacab77e80cbadd29a43ba9d20d0.js"></script>
-                    <p class="container-logo">Haskell<div class="logo-example"><img src="images/Haskell.png" alt="Haskell"></div></p><script src="https://gist.github.com/jsarmientopu/706eadca71018c1121655cf3181ea6dc.js"></script>
-                    <p class="container-logo">Scala<div class="logo-example"><img src="images/scalaLogo.png" alt="Scala"></div></p><script src="https://gist.github.com/jsarmientopu/941c73738e9e8201b3f3470878acafc1.js"></script>
-                    <p class="container-logo">Lisp<div class="logo-example"><img src="images/lispLogo.svg.png" alt="Lisp"></div></p><script src="https://gist.github.com/jsarmientopu/6c72ea9537ac0773a6dbd4309610928a.js"></script>
-                    <p class="container-logo">Ocaml<div class="logo-example"><img src="images/ocaml.jpeg" alt="Ocaml"></div></p><script src="https://gist.github.com/jsarmientopu/7a36121783099cc6792fa3341c27819a.js"></script>
-                    <p class="container-logo">Scheme<div class="logo-example"><img src="images/Scheme_logo.png" alt="Scheme"></div></p><script src="https://gist.github.com/jsarmientopu/448d7984d05a98d5a680a577dbe74491.js"></script>
-                    <p class="container-logo">Erlang<div class="logo-example"><img src="images/erlangLogo.png" alt="Erlang"></div></p><script src="https://gist.github.com/jsarmientopu/4022220261bf7792d5ad3c526cfa673c.js"></script>
-                    <br><p class="container-logo">Ruby<div class="logo-example"><img src="images/rubyLogo.svg.png" alt="Ruby"></div></p><script src="https://pastebin.com/embed_js/NXm2U2Z0"></script>
+                    <br><p>Ruby</p><script src="https://pastebin.com/embed_js/NXm2U2Z0"></script>
                 </div>
             </div>
 
             <div class="row">
                 <h1>Funciones anónimas</h1>
                 <div class="col-md-12">
-                    <br><p class="container-logo">Python<div class="logo-example"><img src="images/pythonLogo.svg.png" alt="Python"></div></p><script src="https://pastebin.com/embed_js/8FFFJHi3"></script>
-                    <br><p class="container-logo">R<div class="logo-example"><img src="images/RLogo.png" alt="R"></div></p><script src="https://pastebin.com/embed_js/iCz44JcK"></script>
+                    <br><p>Python</p><script src="https://pastebin.com/embed_js/8FFFJHi3"></script>
+                    <br><p>R</p><script src="https://pastebin.com/embed_js/iCz44JcK"></script>
                 </div>
             </div>
 
             <div class="row">
                 <h1>Funciones de orden superior</h1>
                 <div class="col-md-12">
-                    <br><p class="container-logo">Ruby<div class="logo-example"><img src="images/rubyLogo.svg.png" alt="Ruby"></div></p><script src="https://pastebin.com/embed_js/N09kcuW0"></script>
+                    <br><p>Ruby</p><script src="https://pastebin.com/embed_js/N09kcuW0"></script>
                 </div>
             </div>
 
             <div class="row">
                 <h1>Currying</h1>
                 <div class="col-md-12">
-                    <br><p class="container-logo">Ruby<div class="logo-example"><img src="images/rubyLogo.svg.png" alt="Ruby"></div></p><script src="https://pastebin.com/embed_js/JYh9GKxs"></script>
+                    <br><p>Ruby</p><script src="https://pastebin.com/embed_js/JYh9GKxs"></script>
                     <br><script src="https://pastebin.com/embed_js/1kzazbfu"></script>
                     <br><script src="https://pastebin.com/embed_js/QAQUmVRD"></script>                   
-                    <br><p class="container-logo">R<div class="logo-example"><img src="images/RLogo.png" alt="R"></div></p><script src="https://pastebin.com/embed_js/u4UjngMD"></script>
+                    <br><p>R</p><script src="https://pastebin.com/embed_js/u4UjngMD"></script>
                 </div>
             </div>
 
             <div class="row">
                 <h1>Procs</h1>
                 <div class="col-md-12">
-                    <br><p class="container-logo">Ruby<div class="logo-example"><img src="images/rubyLogo.svg.png" alt="Ruby"></div></p><script src="https://pastebin.com/embed_js/Yzj3CHQb"></script>
+                    <br><p>Ruby</p><script src="https://pastebin.com/embed_js/Yzj3CHQb"></script>
                 </div>
             </div>
             
             <div class="row">
                 <h1>Functor lista</h1>
                 <div class="col-md-12">
-                    <br><p class="container-logo">Python<div class="logo-example"><img src="images/pythonLogo.svg.png" alt="Python"></div></p><script src="https://pastebin.com/embed_js/7DKZ0kiL"></script>
+                    <br><p>Python</p><script src="https://pastebin.com/embed_js/7DKZ0kiL"></script>
                     <br><script src="https://pastebin.com/embed_js/CnRFREr2"></script> 
                 </div>
             </div>
@@ -147,35 +136,35 @@
             <div class="row">
                 <h1>Functor función</h1>
                 <div class="col-md-12">
-                    <br><p class="container-logo">Python<div class="logo-example"><img src="images/pythonLogo.svg.png" alt="Python"></div></p><script src="https://pastebin.com/embed_js/HTaJuX7B"></script>                   
+                    <br><p>Python</p><script src="https://pastebin.com/embed_js/HTaJuX7B"></script>                   
                 </div>
             </div>
             
             <div class="row">
                 <h1>Caso de uso</h1>
                 <div class="col-md-12">
-                    <br><p class="container-logo">Python<div class="logo-example"><img src="images/pythonLogo.svg.png" alt="Python"></div></p><script src="https://pastebin.com/embed_js/sZdUsVcy"></script>
+                    <br><p>Python</p><script src="https://pastebin.com/embed_js/sZdUsVcy"></script>
                 </div>
             </div>
 
             <div class="row">
                 <h1>Effect tracking</h1>
                 <div class="col-md-12">
-                    <br><p class="container-logo">Python<div class="logo-example"><img src="images/pythonLogo.svg.png" alt="Python"></div></p><script src="https://pastebin.com/embed_js/iG9JGPjN"></script>
+                    <br><p>Python</p><script src="https://pastebin.com/embed_js/iG9JGPjN"></script>
                 </div>
             </div>
 
             <div class="row">
                 <h1>Operadores como funciones</h1>
                 <div class="col-md-12">
-                    <br><p class="container-logo">R<div class="logo-example"><img src="images/RLogo.png" alt="R"></div></p><script src="https://pastebin.com/embed_js/8fACvA2E"></script>
+                    <br><p>R</p><script src="https://pastebin.com/embed_js/8fACvA2E"></script>
                 </div>
             </div>
 
             <div class="row">
                 <h1>Vectorización</h1>
                 <div class="col-md-12">
-                    <br><p class="container-logo">R<div class="logo-example"><img src="images/RLogo.png" alt="R"></div></p><script src="https://pastebin.com/embed_js/vpTWSpz2"></script>
+                    <br><p>R</p><script src="https://pastebin.com/embed_js/vpTWSpz2"></script>
                 </div>
             </div>
             <hr>
