add: funtional thinking - first class abst

--- a/progfun/funcional_teoria/concepts.html
+++ b/progfun/funcional_teoria/concepts.html
@@ -101,7 +101,13 @@
                     <h3>Usar abstracciones de primera clase</h3>
                     <div class="col-md-6 text-justify">
                         <p>
-                            Para completar.
+                            Se hace uso de <a href="#firstclass-fun">funciones de primera clase</a>, estas son funciones que toman como argumento otras funciones.
+                            Existen también valores de primera clase, son aquellos que se pueden pasar a una función, pueden ser retornados por una, se pueden guardar en arreglos,
+                            asignar a un atributo de un objeto, se pueden asignar auna variable, entre otros.  En cambio, operadores aritméticos, ciclos, sentencias if, bloques try/catch,
+                            son ejemplos de valores que no son de primera clase. <br>
+                            La habilidad de identificar valores, funciones, entre otros, que no son de primera clase convertirlos a primera clase proporciona un gran poder para resolver problemas,
+                            pues abre las puertas a patrones de programación funcional más sofisticados (Cabe resaltar que son patrones de PF, diferentes a los usualmente usados para POO).
+                            Algunas ventajas son que permiten abstraer código, eliminar código duplicado, envolver código en funciones.
                         </p>
                     </div>
 
@@ -459,7 +465,7 @@
 
             <div class="row">
                 <h2>Funciones de Orden Superior y de Primera Clase</h2>
-                <div class="col-md-6 text-justify">
+                <div id="firstclass-fun" class="col-md-6 text-justify">
                     <h4>Funciones de Orden Superior</h4>
                     <p>
                         Son funciones que pueden tomar otras funciones como argumentos o devolverlas como resultado.
