edit: modified sections style

--- a/progfun/funcional_teoria/concepts.html
+++ b/progfun/funcional_teoria/concepts.html
@@ -45,14 +45,14 @@
             <div class="row">
                 <h1 class="text-center">Conceptos clave</h1>
 
-                <p>A continuación veremos algunos conceptos referentes a la programación funcional</p>
+                <p>A continuación veremos algunos conceptos referentes a la programación funcional.</p>
                 <hr>
                 <hr>
 
 
                 <div class="row">
                     <h2>Pensamiento Funcional</h2>
-                    <div class="col-md-6 text-justify">
+                    <div class="col-md-12 text-justify">
                         <p>
                             El pensamiento funcional es la serie de habilidades e ideas que se aplican para resolver problemas funcionalmente.
                             Dos ideas importantes que debe aprender el programador funcional son:
@@ -63,6 +63,9 @@
                         </ol>
                         <p>Estas no son las únicas ideas de programación funcional, pero sí proporcionan una base sólida de ello.</p>
                     </div>
+                    <hr>
+                    <hr>
+
                     <h3>Distinguir acciones, cálculos y datos</h3>
                     <div class="col-md-6 text-justify">
                         <p>
@@ -109,6 +112,7 @@
                             pues abre las puertas a patrones de programación funcional más sofisticados (Cabe resaltar que son patrones de PF, diferentes a los usualmente usados para POO).
                             Algunas ventajas son que permiten abstraer código, eliminar código duplicado, envolver código en funciones.
                         </p>
+                        <img src="images/abstraction.jpg" width="50%" class="center-block" alt="">
                     </div>
 
                 </div>
