--- a/progfun/funcional_teoria/applications.html
+++ b/progfun/funcional_teoria/applications.html
@@ -122,6 +122,35 @@
 
                     </div>
 
+                    <hr>
+
+                    <div class="row text-justify">
+                        <div class="col-md-4">
+                            <img src="images/dataanalytics.jpg" alt="data" class="text-center img-thumbnail">
+
+                        </div>
+
+                        <div class="col-md-8">
+                            <ul>
+                                <li>
+                                    Procesamiento de datos. Aplicar técnicas usadas en programación funcional
+                                    para realizar operaciones sobre conjuntos de datos, tales como transformaciones, filtros,
+                                    agregaciones, entre otras,  permiten una mayor eficiencia y legibilidad.
+                                </li>
+                                <li>
+                                    Deep Learning. Los modelos de deep learning se asemejan a la programación funcional
+                                    en su particularidad de componer funciones, puesto que las redes neuronales están
+                                    diseñadas de la misma manera, realizando transformaciones de funciones de capa a capa. Además,
+                                    al operar sobre los datos de entrada, estos no se modifican sino que se generan nuevos
+                                    valores para usar en las siguientes capas, esto se corresponde con la característica de
+                                    inmutabilidad. Muchos de los procesos comunmente realizados al entrenar modelos
+                                    de machine learning tienen un funcionamiento intrínsecamente funcional.
+                                </li>
+                            </ul>
+
+                        </div>
+                    </div>
+
                 </div>
             </div>
 
