add: application-discord

--- a/progfun/funcional_teoria/applications.html
+++ b/progfun/funcional_teoria/applications.html
@@ -483,6 +483,32 @@
                         <br>--->más información <a href="https://docs.aws.amazon.com/es_es/lambda/latest/dg/welcome.html">aquí</a><---
                     </p>
                 </div>
+
+
+                <div class="col-md-4">
+
+                    <img src="images/discord.png" alt="discord" class="text-center img-thumbnail">
+
+                </div>
+                <div class="col-md-8">
+                    <h2 class="text-center">
+                        11. Discord
+
+                    </h2>
+
+                    <p>
+                        Discord es un servicio de mensajería instantánea y chat de voz VolP. Principalmente usa Elixir,
+                        un lenguaje funcional conocido por su escalabilidad y tolerancia a fallos, contruido sobre la
+                        máquina virtual de Erlang.<br>
+                        Adicionalemente, hace uso de Redux, una librería de gestión de estado que sigue un enfoque funcional
+                        para las tareas de administración del estado de la aplicación.
+                    </p>
+                    <p>
+                        <br>--->más información <a href="https://www.linkedin.com/pulse/tech-stack-discord-faysal-ahmed/">aquí</a><---
+                    </p>
+
+                </div>
+
             </div>            
             <hr>
         </div>
